# solar-system

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  readme.md  solar.cpp  star.cpp  star.h
assets/: simple_car.mtl  stars.mtl
mesh/: CMakeLists.txt  material.cpp  material.h  mesh.cpp  mesh.h  test_obj.cpp
mesh/include/: string_ext.hpp
pch/: pch.h
scene_gl_utility/: CMakeLists.txt  camera.h  glScene.h  light.cpp  light.h
